// Vitest Snapshot v1

exports[`analyzeSystemRegistration > hello 1`] = `undefined`;

exports[`analyzeSystemRegistration > minified 1`] = `
{
  "chunkListCode": "[\\"./chunks/index-legacy-60db70ad.js\\",\\"./chunks/singletons-legacy-a9d19225.js\\"]",
  "exportParam": "n",
  "moduleParam": "o",
  "paramsCode": "(n,o)",
}
`;

exports[`analyzeSystemRegistration > svelte-legacy-part 1`] = `
{
  "chunkListCode": "['./chunks/index-legacy-60db70ad.js', './chunks/singletons-legacy-4fba2acb.js']",
  "exportParam": "exports",
  "moduleParam": "module",
  "paramsCode": "(exports, module)",
}
`;

exports[`analyzeSystemRegistration > vue-legacy-part 1`] = `
{
  "chunkListCode": "[]",
  "exportParam": "exports",
  "moduleParam": "module",
  "paramsCode": "(exports, module)",
}
`;
